chore: migrate branches and old setup to new org

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "loader",
     "stylus"
   ],
-  "homepage": "https://github.com/webpack-contrib/stylus-loader",
-  "bugs": "https://github.com/webpack-contrib/stylus-loader/issues",
-  "repository": "webpack-contrib/stylus-loader",
+  "homepage": "https://github.com/webpack/stylus-loader",
+  "bugs": "https://github.com/webpack/stylus-loader/issues",
+  "repository": "webpack/stylus-loader",
   "funding": {
     "type": "opencollective",
     "url": "https://opencollective.com/webpack"
@@ -25,7 +25,7 @@
     "clean": "del-cli dist",
     "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production babel src -d dist --copy-files",
-    "commitlint": "commitlint --from=master",
+    "commitlint": "commitlint --from=main",
     "security": "npm audit --production",
     "lint:prettier": "prettier --cache --list-different .",
     "lint:code": "eslint --cache .",
